--- a/Csomagajánlataink.html
+++ b/Csomagajánlataink.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Csomagajánlataink</title>
+    <link rel="stylesheet" href="css\bootstrap.css">
     <link rel="stylesheet" href="css\style.css">
+
 </head>
 
 <body>
@@ -17,41 +19,58 @@
     </div>
     <nav>
         <div class="navEA">
-          <button><a href="EAindex.html">Főoldal</a></button>
-          <button><a href="Rolunk.html">Rólunk</a></button>
-          <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
-          <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
-          <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
-          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
-          <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+            <button><a href="EAindex.html">Főoldal</a></button>
+            <button><a href="Rolunk.html">Rólunk</a></button>
+            <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+            <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+            <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+            <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+            <button><a href="Kapcsolat.html">Kapcsolat</a></button>
         </div>
-      </nav> 
+    </nav>
 
-  
+
 
 
     <h1>CSOMAG AJÁNLATAINK</h1>
-  <div class="szünet"> </div>
-    <div class="csháttér">
-        <h2>Vendéglétszám alapján</h2>
-        <ol>
-            <div class="csomagfels">
-                <li>Small: 30-60 fő </li>
-                <li>Medium 60-80 fő</li>
-                <li>Large 80-120 fő</li>
-            </div>
-        </ol>
-
-        <div class="szünet"> </div>
-        <h2>Csomag tartalma alapján</h2>
-        <div>
-            <button class="középre"><a href="EAindex.html">Basic Csomag</a></button>
-            <button class="középre"><a href="EAindex.html">Classic Csomag</a></button>
-            <button class="középre"><a href="EAindex.html">Exclusive Csomag</a> </button>
+    <div class="szünet"> </div>
+    <div class="container">
+        <div class="row">
+            <div class="col 4"> </div>
         </div>
+        <div class="row">
+            <div class="col 4">
+
+                <h2>Vendéglétszám alapján</h2>
+                <ol>
+                    <div class="csomagfels">
+                        <li>Small: 30-60 fő </li>
+                        <li>Medium 60-80 fő</li>
+                        <li>Large 80-120 fő</li>
+                    </div>
+                </ol>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col 4"> </div>
+        </div> 
     </div>
 
 
+
+    <div class="szünet"> </div>
+
+    <h2>Csomag tartalma alapján</h2>
+    <div>
+        <button class="középre"><a href="EAindex.html">Basic Csomag</a></button>
+        <button class="középre"><a href="EAindex.html">Classic Csomag</a></button>
+        <button class="középre"><a href="EAindex.html">Exclusive Csomag</a> </button>
+    </div>
+    </div>
+
+
+    <div class="szünet"> </div>
+    
     <table class="táblázat">
         <caption> <B></B>
             <h1>Csomag ajánlataink</h1></B>
@@ -122,7 +141,7 @@
 
     </table>
     <table></table>
-    <div class="szünet">  </div>
+    <div class="szünet"> </div>
 
 </body>
 
