--- a/EAindex.html
+++ b/EAindex.html
@@ -35,7 +35,7 @@
   <div class="szünet"> </div>
   <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
   <div class="szünet"> </div>
-  
+
   <div class="szünet"> </div>
 
 
@@ -58,7 +58,7 @@
   <div class="szünet"> </div>
 
   <div class="row align-items-center">
-    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Kézműves/asztal_FE.jpg" alt="asztal_FE"></div>
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Teremdekor/asztal_FE.jpg" alt="asztal_FE"></div>
     <div class="col-12 col-md-8" class="szövegközép">
       <p>Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a
         területen,
@@ -66,8 +66,7 @@
         csodálatosabbá varázsolni a házasságkötésüket. </p>
       <p> A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk
         minden munkánk során, a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben
-        elhelyezett utolsó
-        virágsziromig.</p>
+        elhelyezett utolsó virágsziromig.</p>
     </div>
 
   </div>
@@ -78,24 +77,27 @@
       <ul>
         <li>A Ti álmaitokat fogjuk megvalósítani</li>
         <li>Részletekbe menő odafigyeléssel dolgozunk</li>
-        <li>Ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
-        <li>fiatalos lendület</li>
-        <li>fiatalos lendület</li>
+        <li>Ha csak elképzeléseid vannak, ne aggód együtt kitaláljuk, mi az ami igazán tetszene Nektek!</li>
+        <li>Komolyan vessszük a megbeszélt határidőket.</li>
+        <li>Igényeteknek megfelelő rendszereseséggel egyeztetünk Veletek </li>
+        <li>Számunkra minden esküvő egyedi és különleges, ezért épp ilyen dekorácikat készítünk Nektek! </li>
       </ul>
-      <p>Sok ötletes és elegáns dekorációs elem és kellék áll rendelkezésre, csak hogy néhányat említsek: különböző
+      <p>Az eskövőtök hangulatához illően sok ötletes és elegáns dekorációs elem és kellék áll rendelkezésetekre, csak hogy néhányat említsek: különböző
         asztaldíszek, szülőköszöntő-, tanú felkérő ajándékok, szertartási kellékek, gyűrűtartók, tortaállványok,
         autódíszek,
         virágos hajcsatok, lampionok...stb. A lehetséges dekorválasztékot szinte a végtelenig - vagy legalábbis a
         kreatív
-        menyasszonyok fantáziájának határáig- sorolhatnánk.</p> </div>
+        menyasszonyok fantáziájának határáig- sorolhatnánk.</p>
+        <p>Mondd el mire van szükséges és mi megtervezzük és elkészítjük számotokra! </p>
+    </div>
     <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1"></div>
   </div>
   <div class="szünet"> </div>
-  <div class="középszöveg">
+  <div>
     <p>Természetesen a fentieken kívül is bármit szívesen elkészítünk Nektek, hogy a nagy napotokon minden igazán
-      különleges legyen és a Ti egyéniségeteket tükrözze.</p>
+      tökéletes legyen és a Ti egyéniségeteket tükrözze.</p>
     <p> A teljes helyszíndekoráláson túl akár fotósarok és Instax mini 11 bérlést is tudunk biztosítani számotokra.
-    </p>
+
     <p> Reméljük, elnyertük a tetszéseteket, így lehetőségünk nyílik dekorációnkkal még szebbé varázsolni az
       esküvőtöket!
     </p>
