--- a/Egyedi kézműves termékeink.html
+++ b/Egyedi kézműves termékeink.html
@@ -31,6 +31,40 @@
       </nav> 
 
 
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <img src="IMG/Kézműves/pár_figura.jpg" alt="tábla">
+          </div>
+          <div class="col">
+            <img src="IMG/Kézműves/kellék.jpg" alt="kellék">
+          </div>
+          <div class="col">
+          <div calss="imgSmall"><img src="IMG/Kézműves/ajándék.jpg" alt="ajándék">
+          </div>
+        </div>
+        <div class="col">
+        <div calss="imgSmall"><img src="IMG/Kézműves/Tábla.JPG" alt="ajándék">
+        </div>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <img src="IMG/Kézműves/csokor.jpg" alt="csokor">
+            </div>
+            <div class="col">
+              <img src="IMG/Kézműves/készülő lakat.jpg" alt="lakat">
+            </div>
+            <div class="col">
+            <div calss="imgSmall"><img src="IMG/Kézműves/lámpás.jpg" alt="lámpás">
+            </div>
+          </div>
+          <div class="col">
+          <div calss="imgSmall"><img src="IMG/Kézműves/parafa asztalszám1_5.jpg" alt="aasztalszám">
+          </div>
+          </div>
+      </div>
 
 </body>
 </html>
