--- a/Instax bérlés.html
+++ b/Instax bérlés.html
@@ -38,7 +38,8 @@
   <div class="szünet"> </div>
 
   <div class="row align-items-center">
-    <div class="col-12 col-md-8" class="középszöveg">
+    <div class="col-1"></div>
+    <div class="col-8 col-md-6" class="közép">
       <p class="bold" style="text-align: left;">Miért jó az Instax gép?</p>
       <p>• A profi fotós úgyis lencsevégre kap minden megható, tökéletes pillanatot, az Instax géppel pedig pillanatok
         alatt megörökíthetsz minden mást!</p>
@@ -52,9 +53,10 @@
       <p>• Mire vége az esküvőnek már a kezedben is lesz egy egyedi életre szóló emlék.</p>
       <p class="bold"> • Retró élmény a felnőtteknek, újdonság a gyerekeknek! </p>
     </div>
-    <div class="col-6 col-md-4"><img src="IMG/Kézműves/instax_mini11.png" alt="instax_mini11"></div>
+    <div class="col-4 col-md-4"><img src="IMG/Kézműves/instax_mini11.png" alt="instax_mini11"></div>
   </div>
 
+  <div class="szünet"> </div>
   <h4>A vidám hangulat és spontán és vicces felvételek garantáltak!</h4>
   <div class="szünet"> </div>
 
@@ -92,20 +94,20 @@
     <div class="szünet"> </div>
 
 
-
     <div class="szünet"> </div>
     <h4>Csak töltsd ki az igénylőlapot vagy hívj minket telefonon!</h4>
     <div class="szünet"> </div>
 
 
-
-    <div class="bérl"></div>
-    <h2>Áraink:</h2>
+    <div class="bérl">
+      <h2>Áraink:</h2>
+    </div>
 
 
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-1"></div>
+        <div class="col-5">
           <ul>
             <p class="bold">Instax gép kölcsönzés:</p>
             <li>1 napra: 5.500 Ft </li>
@@ -126,7 +128,7 @@
           </ul>
         </div>
 
-        <div class="col">
+        <div class="col-5">
           <ul>
             <p class="bold">Instax filmek ára:</p>
             <li>Kis csomag: 3.000 Ft</li>
@@ -140,9 +142,14 @@
             <li>Egész hétvégére (péntek délutántól hétfő reggelig): 45.000 Ft (+szállítás költség)</li>
           </ul>
         </div>
+        <div class="col-1"></div>
+      </div>
+    </div>
 
-
-        <div>
+    <div class="container">
+      <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
           <ul>
             <p class="bold">Az instax bérlés feltételei: Nem csak esküvőkre!</p>
             <li>A gép jelenleg csak fehér színben elérhető</li>
@@ -157,24 +164,35 @@
             <li>Ha 6 csomagnál több filmre lesz szükséged kérlek, a bérlés előtt egy héttel előbb jelezd felénk.
             <li>Kauciót kizárólag készpénzben fogadjuk el!</li>
             <li>Napi bérlésél minden megkezdett 24 órát számolunk.</li>
-            <li>Hétvégi bérlés esetén az utolsó munkanapon 12:00 és 18:00 között lehet átvenni az eszközt és legkésőbb a
+            <li>Hétvégi bérlés esetén az utolsó munkanapon 12:00 és 18:00 között lehet átvenni az eszközt és
+              legkésőbb a
               hétvégét követő első munkanap 12:00-ig kell azt leadni</li>
             </li>
             <li>Az átvétel pontos időpontja miatt előzetes telefonos vagy email egyeztetés szükséges!</li>
           </ul>
+          <div class="col-3"></div>
         </div>
+      </div>
+    </div>
 
-
-        <div class="szünet"> </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+          <p class="bold"> Ha bármi kérdésed van az Instax bérléssel kapcsolatban keress bátran
+            emailen: everafter.eskuvoidekor@gmail.com
+            vagy a 06-30-630-3870 telefonszámon!</p>
+        </div>
+        <div class="col-1"></div>
 
       </div>
-      <p class="bold"> Ha bármi kérdésed van az Instax bérléssel kapcsolatban keress bátran
-        emailen: everafter.eskuvoidekor@gmail.com
-        vagy a 06-30-630-3870 telefonszámon!</p>
     </div>
-    <a href="Instax bérlés.html">
-      <h3> Örömteli kattintgatásra fel!</h3>
-    </a>
+    <div>
+      <a href="Instax bérlés.html">
+        <h3> Örömteli kattintgatásra fel!</h3>
+      </a>
+    </div>
+
 </body>
 
 </html>
