--- a/Kapcsolat.html
+++ b/Kapcsolat.html
@@ -31,7 +31,7 @@
   <div class="szünet"> </div>
   <h1>Kapcsolat</h1>
   <div class="szünet"> </div>
-  <p>Bármilyen kérdés esetén keress meg bizalommal az alábbi eléárhetőségeim egyikén vagy töltsd ki az alábbi űrlapot és
+  <p>Bármilyen kérdés esetén keress meg bizalommal az elérhetőségeim egyikén (tel +36 30 360 3870, e-mail: everafter.eskuvoidekoracio@gmail.com)vagy töltsd ki az alábbi űrlapot és
     felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
   <p class="üdv">Üdvözlettel:</p>
   <p class="signo">Horváthné Forgács Eszter</p>
@@ -78,6 +78,10 @@
       <div class="urlapmezo">
         <label for="Megjegyzés">Megjegyzés: </label>
         <input class="input" id="Megjegyzés" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="GDPR">Elolvastam és elfogadom az Adatvédelmi Tájékoztatóban foglaltakat! *</label>
+        <input class="input" id="GDPR" type="checkbox" required>
       </div>
 
       <div><button><a href="Kapcsolat.html">Beküld</a></button>
