--- a/Korábbi munkáink.html
+++ b/Korábbi munkáink.html
@@ -33,31 +33,35 @@
   <h1>Korábbi munkáink</h1>
 
   <p> Íme egy kis ízelítő, gyönyörű kézzel készített dekorációinkból és esküvői kellékeinkből. </p>
-  <div calss="imgSmall"><img src="IMG/Kézműves/ajándék.jpg" alt="ajándék">
+  
 
-    <img src="IMG/Kézműves/Tábla.JPG" alt="tábla">
-    <img src="IMG/Kézműves/kellék.jpg" alt="kellék">
+   
+    
   </div>
   <div class="imgBig">
-    </divclass>> <img src="IMG/Kézműves/teremAd.JPG" alt="teremAd">
-    <img src="IMG/Kézműves/asztal_FE.jpg" alt="asztal">
+    </divclass>> <img src="IMG/Teremdekor/teremAd.JPG" alt="teremAd">
+    <img src="IMG/Teremdekor/asztal_FE.jpg" alt="asztal">
   </div>
 
-  <div class="imgBig"> <img src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
+  <div class="imgBig"> <img src="IMG/Teremdekor/Főasztal.JPG" alt="főasztal">
     <img src="IMG/Kézműves/teremFE.jpg" alt="teremFE">
   </div>
 
   <div class="container">
     <div class="row">
-      <div class="col-sm">
-        <img src="IMG/Kézműves/Tábla.JPG" alt="tábla">
+      <div class="col">
+        <img src="IMG/Teremdekor/HFE_terem_1.jpg" alt="HFE_terem_1">
       </div>
-      <div class="col-sm">
-        One of three columns
+      <div class="col">
+        <img src="IMG/Teremdekor/Főasztal 2.JPG" alt="Főasztal">
       </div>
-      <div class="col-sm">
-        One of three columns
+      <div class="col">
+      <div></div>
       </div>
+    </div>
+    <div class="col">
+    <div calss="imgSmall"><img src="IMG/Teremdekor/teremFE.jpg"ajándék">
+    </div>
     </div>
   </div>
 
