--- a/Rolunk.html
+++ b/Rolunk.html
@@ -86,7 +86,7 @@
         műfajában alkot gyönyörűségeket.</h3>
     <div class="szünet"> </div>
     <div class="row align-items-center">
-        <div class="col-6 col-md-4"><img src="IMG/Profil képek/FP.jpg" alt="Péter"></div>
+        <div class="col-6 col-md-4"><img src="IMG/Profil képek/FP profil_2.jpg" alt="Péter"></div>
         <div class="col-12 col-md-8" class="középszöveg">
             <p>Vitathatatlanul a legjobb testvér, aki autodidakta módon sajátította el valamennyi őt érdeklő
                 képzőművészeti
