--- a/szövegfuttatás próba.html
+++ b/szövegfuttatás próba.html
@@ -18,6 +18,31 @@
 
   
 
+
+
+
+
+
+
+</li>
+<li class="nav-item dropdown">
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown
+  </a>
+  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <a class="dropdown-item" href="Egyedi kézműves termékeink.html">Action</a>
+    <a class="dropdown-item" href="Korábbi munkáink.html">Another action</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+
+
+
+
+
+
+
+
     <div class="sor">
         <div class="kepDiv">
              
