--- a/Csomagajánlataink.html
+++ b/Csomagajánlataink.html
@@ -83,7 +83,7 @@
             <tr>
                 <th>Csomagméret</th>
                 <th>Small</th>
-                <th>Megium</th>
+                <th>Medium</th>
                 <th>Large</th>
             </tr>
 
