--- a/EAindex.html
+++ b/EAindex.html
@@ -46,12 +46,12 @@
       <p> Az <span class="bold">Ever After Esküvői Dekor </span> csapata felkészült minden lehetetlennek tűnő
         dekorációs feladatra.</p>
       <p>Válasszatok minket, Kedves Jegyespár és mindent megteszünk annak érdekében, hogy az általatok megálmodott
-        csodálatos környezetben mondhassátok ki az életteket összekötő
-        boldogító igent.</p>
-      <p> Mindezt pedig análkül, hogy aggódnotok kellene a dekorációval járó beszerzési, szervezési és kivitelezési
+        csodálatos környezetben mondhassátok ki az életeteket összekötő
+        boldogító Igent.</p>
+      <p> Mindezt pedig anélkül, hogy aggódnotok kellene a dekorációval járó beszerzési, szervezési és kivitelezési
         feladatok
         miatt, mert megérdemlitek, hogy az esküvő előtti időszakban és főként az esküvő napján, arra figyelhessetek, ami
-        a legfontosabb: <span class="bold">egymásra.</span></p>
+        a legfontosabb: <span class="bold">Egymásra.</span></p>
     </div>
     <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
   </div>
