--- a/Korábbi munkáink.html
+++ b/Korábbi munkáink.html
@@ -28,53 +28,52 @@
       <button><a href="Kapcsolat.html">Kapcsolat</a></button>
     </div>
   </nav>
-  
+
   <div class="szünet"> </div>
   <h1>Korábbi munkáink</h1>
 
   <p> Íme egy kis ízelítő, gyönyörű kézzel készített dekorációinkból és esküvői kellékeinkből. </p>
-  
 
-   
-    
-  </div>
-  <div class="imgBig">
-    </divclass>> <img src="IMG/Teremdekor/teremAd.JPG" alt="teremAd">
-    <img src="IMG/Teremdekor/asztal_FE.jpg" alt="asztal">
-  </div>
 
-  <div class="imgBig"> <img src="IMG/Teremdekor/Főasztal.JPG" alt="főasztal">
-    <img src="IMG/Kézműves/teremFE.jpg" alt="teremFE">
-  </div>
+
 
   <div class="container">
     <div class="row">
-      <div class="col">
-        <img src="IMG/Teremdekor/HFE_terem_1.jpg" alt="HFE_terem_1">
-      </div>
-      <div class="col">
-        <img src="IMG/Teremdekor/Főasztal 2.JPG" alt="Főasztal">
-      </div>
-      <div class="col">
-      <div></div>
-      </div>
+      <div class="col-1"></div>
+      <div class="col-5"> <img src="IMG/Teremdekor/teremAd.JPG" alt="teremAd"> </div>
+      <div class="col-5"><img src="IMG/Teremdekor/asztal_FE.jpg" alt="asztal"> </div>
+      <div class="col-1"></div>
     </div>
-    <div class="col">
-    <div calss="imgSmall"><img src="IMG/Teremdekor/teremFE.jpg"ajándék">
-    </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
-    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-3"><img src="IMG/Teremdekor/Főasztal.JPG" alt="főasztal"></div>
+        <div class="col-5"></div>
+        <div class="col-1"></div>
+      </div>
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col"> <img src="IMG/Teremdekor/HFE_terem_1.jpg" alt="HFE HFE_terem_1"></div>
+          <div class="col"><img src="IMG/Teremdekor/teremAD_2.JPG" alt="teremAd_2">
+            <div class="col-1"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-5">  <img src="IMG/Teremdekor/Főasztal 2.JPG" alt="Főasztal"> </div>
+        <div class="col-5"><img src="IMG/Teremdekor/teremFE.jpg" alt="teremFE"></div>
+          <div class="col-1"><img src="IMG/Teremdekor/terem_HFE_3__.jpg" alt="terem terem_HFE_3__"> </div>
+
+
+        </div>
+        <div class="col">
+
+        </div>
 
 </body>
 
