--- a/EAindex.html
+++ b/EAindex.html
@@ -30,7 +30,7 @@
   </nav>
 
   <div class="szünet"> </div>
-  <h1> Üdvözöllek Kedves Látogató, Kedves Menyasszony és Vőlegény!</h1>
+  <h1> Kedves Menyasszony és Vőlegény!</h1>
 
   <div class="szünet"> </div>
   <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
