--- a/Korábbi munkáink.html
+++ b/Korábbi munkáink.html
@@ -40,8 +40,8 @@
   <div class="container">
     <div class="row">
       <div class="col-1"></div>
-      <div class="col-5"> <img src="IMG/Teremdekor/teremAd.JPG" alt="teremAd"> </div>
-      <div class="col-5"><img src="IMG/Teremdekor/asztal_FE.jpg" alt="asztal"> </div>
+      <div class="col"> <img src="IMG/Teremdekor/teremAd.JPG" alt="teremAd"> </div>
+      <div class="col"><img src="IMG/Teremdekor/asztal_FE.jpg" alt="asztal"> </div>
       <div class="col-1"></div>
     </div>
 
@@ -64,10 +64,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-1"></div>
-        <div class="col-5">  <img src="IMG/Teremdekor/Főasztal 2.JPG" alt="Főasztal"> </div>
-        <div class="col-5"><img src="IMG/Teremdekor/teremFE.jpg" alt="teremFE"></div>
-          <div class="col-1"><img src="IMG/Teremdekor/terem_HFE_3__.jpg" alt="terem terem_HFE_3__"> </div>
+        <div class="col"></div>
+        <div class="col">  <img src="IMG/Teremdekor/Főasztal 2.JPG" alt="Főasztal"> </div>
+        <div class="col"><img src="IMG/Teremdekor/teremFE.jpg" alt="teremFE"></div>
+          <div class="col"><img src="IMG/Teremdekor/terem_HFE_3__.jpg" alt="terem terem_HFE_3__"> </div>
 
 
         </div>
