--- a/Rolunk.html
+++ b/Rolunk.html
@@ -44,8 +44,9 @@
 
     <div class="szünet"> </div>
     <div class="row align-items-center">
-        <div class="col-5 col-md-3"><img with="75" src="IMG/Profil képek/AD_profil.JPG" alt="Dávid"></div>
-        <div class="col-7 col-md-4" class="középszöveg">
+        <div class="col"></div>
+        <div class="col-md-3"><img with="75" src="IMG/Profil képek/AD_profil.JPG" alt="Dávid"></div>
+        <div class="col-5" class="középszöveg">
 
             <p>Ha gyönyörűen megfestett vagy gravírozott ajándékra vágytok Dávid a Ti emberetek!
             </p>
@@ -57,6 +58,7 @@
                 munkáját áthatja a szép díszes folyóírás, a kalligráfia iránti alázat, így szívesen bármilyen feliratot
                 elkészíti számotokra.</p>
         </div>
+        <div class="col"></div>
     </div>
 
     <div class="szünet"> </div>
